@@ -1,32 +1,69 @@
 # == Class auditd::config::audisp::syslog
 #
 # This class utilizes rsyslog to send all audit records to syslog.
-# This will definitely increase the volume of log messages passing out of your
-# system and you should probably ensure that they are encrypted using the
-# stunnel module.
+#
+# This capability is most useful for forwarding audit records to
+# remote servers as syslog messages, since these records are already
+# persisted locally in audit logs.  For most sites, however, using
+# this capability for all audit records can quickly overwhelm host
+# and/or network resources, especially if the messages are forwarded
+# to multiple remote syslog servers or (inadvertently) persisted
+# locally. Site-specific, rsyslog actions to implement filtering will
+# likely be required to reduce this message traffic. 
+#
+# As a precaution, to prevent the above overload scenario, this class,
+# by default, inserts a rsyslog action to drop these messages, prior to
+# forwarding to remote syslog servers or writing to local syslog files.
+# You can disable this drop behavior via configuration, but are strongly
+# advised to apply appropriate syslog message filtering before doing so.
+# We also recommend you ensure any forwarded, audit messages are
+# encrypted using the stunnel module, due to the nature of the
+# information carried by these messages.
 #
 # == Parameters
 #
-# [*log_server*]
-#   The server to which to send the logs.
+# [*drop_audit_logs*]
+#   Type:  Boolean
+#   Default:  true
+#     When set to false, auditd records will be forwarded to remote
+#     servers and/or written to local syslog files, as directed by the
+#     site rsyslog configuration.
 #
-# [*encrypt_logs*]
-#   If set to 'true', this will send the logs to
-#   127.0.0.1:$encrypted_port.
+# [*priority*]
+#   Type:  String
+#   Default:  LOG_INFO
+#     The syslog priority for all audit record messages.
+#     This value is used in the /etc/audisp/plugins.d/syslog.conf file.
 #
-#   This expects an stunnel type setup.
-#
-# [*encrypted_port*]
-#   The port to which to send the logs on localhost.
+# [*facility*]
+#   Type:  String
+#   Default:  ''
+#     The syslog facility for all audit record messages. This value is
+#     used in the /etc/audisp/plugins.d/syslog.conf file.  For the older
+#     auditd versions used by CentOS6 and CentOS7, must be an empty string,
+#     LOG_LOCAL0, LOG_LOCAL1, LOG_LOCAL2, LOG_LOCAL3, LOG_LOCAL4, LOG_LOCAL5,
+#     LOG_LOCAL6, or LOG_LOCAL7. An empty string results in LOG_USER and
+#     is the ONLY mechanism to specify that facility. No other facilities
+#     are allowed.
 #
 class auditd::config::audisp::syslog (
-  $log_servers = hiera('log_servers',[])
+  $drop_audit_logs = true,
+  $priority = 'LOG_INFO',
+  $facility = ''
 ) {
-  validate_array($log_servers)
+  validate_bool($drop_audit_logs)
+  validate_array_member($priority, ['LOG_DEBUG', 'LOG_INFO',
+    'LOG_NOTICE', 'LOG_WARNING', 'LOG_ERR', 'LOG_CRIT', 'LOG_ALERT',
+    'LOG_EMERG'])
 
-  if !empty($log_servers) {
-    # Note: This only happens if you are offloading your logs.
-    # Otherwise, just go look at the audit files.
+  validate_array_member($facility, ['', 'LOG_LOCAL0', 'LOG_LOCAL1',
+    'LOG_LOCAL2', 'LOG_LOCAL3', 'LOG_LOCAL4', 'LOG_LOCAL5', 'LOG_LOCAL6',
+    'LOG_LOCAL7'])
+
+  if $drop_audit_logs {
+    # This will prevent audit records from being forwarded to remote
+    # servers and/or written to local syslog files, but you still have
+    # access to the records in the local audit log files.
     rsyslog::rule::drop { 'audispd':
       rule   => 'if $programname == \'audispd\''
     }
@@ -38,7 +75,7 @@ active = yes
 direction = out
 path = builtin_syslog
 type = builtin
-args = LOG_INFO
+args = ${priority} ${facility}
 format = string
 "
   }
