@@ -1,3 +1,9 @@
+* Mon Sep 26 2016 Jeanne Greulich, Liz Nemsick - 5.1.0-0
+- Allow user to specify syslog facility and priority for audit record
+  messages.
+- Allow user to enable/disable audit record syslog messaging independent
+  of the presence of forwarding logging servers.
+
 * Mon Aug 29 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.4-0
 - Added booleans to toggle sections of audit rules.
 
